--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>上传文件示例</h1>
-    <form method="post" enctype="multipart/form-data" action="http://localhost:8080/upload">
+    <form method="post" enctype="multipart/form-data" action="http://192.168.0.119:8080/upload">
       <label for="file">选择文件:</label>
       <input type="file" name="file" id="file"><br><br>
       <input type="submit" value="上传">
